--- a/index.html
+++ b/index.html
@@ -1,18 +1,46 @@
 <html>
+
 	<head>
 		<script src="js/jq.js"></script>
+		<script src="js/jqui.js"></script>
+		<script src="js/vex.js"></script>
+		<script src="js/vex.dialog.js"></script>
+		<script>vex.defaultOptions.className = 'vex-theme-os';</script>
 		<script src="js/utilities.js"></script>
 		<script src="js/relay.js"></script>
 		<script src="js/script.js"></script>
 		
+		<link type="text/css" rel="stylesheet" href="css/jqui.css">
+		<link type="text/css" rel="stylesheet" href="css/vex.css">
+		<link type="text/css" rel="stylesheet" href="css/vex-theme-os.css">
+		<link type="text/css" rel="stylesheet" href="css/style.css">
+		
 		<script>
 			$(function()
 			{
+				$("#page_client").hide();
+				$("#connectButton").button();
+				$("#connectButton").click(connectToServer);
 				connectToRegistry();
 			});
 		</script>
 	</head>
+	
 	<body>
-		hey
+		<div id="content">
+			<div id="page_serverList">
+				<div id="serverHeader">Pok&eacute;mon Online WebClient</div>
+				<div id="servers">
+					<i style="display:block; padding:8px;">Loading servers...</i>
+				</div>
+				<input type="text" id="name" value="Name"></input>
+				<input type="text" id="advancedConnection"></input>
+				<div id="connectButton">Connect</div>
+			</div>
+			<div id="page_client">
+				<div id="chat"></div>
+			</div>
+		</div>
 	</body>
+	
 </html>
